@@ -1,7 +1,7 @@
 DIST leechcraft-0.4.85.tar.bz2 4048479 RMD160 e1a57dbe445ee595da73ea31028d7cd74dc1da95 SHA1 f755543d758e073068bbe2cda927212ce2733532 SHA256 8653262be3f922bff1cddb6c165743ddce803751226bc494fd952387058300c2
 DIST leechcraft-0.4.90.tar.bz2 4934648 RMD160 ccf069e3d853e59576665b0d472f3d4653cad670 SHA1 9967ef523c379f85d0013da3f5626b8691466d4a SHA256 8baf875a75791ea11803ffd34799b10977d004041e55c9e6cd1c5e6e5394667f
-EBUILD leechcraft-eiskaltdcpp-0.4.85.ebuild 1383 RMD160 b0371e5c06a129bae4c9e7f2f2ad85d3aeffa5dd SHA1 25f23df3a402c1a2bd32c028c81662e1bd5eb205 SHA256 1ab78481793eb7cf2876f5fcb1eec3b48a0dd5119e4562ba95b1624c6e7d64c7
-EBUILD leechcraft-eiskaltdcpp-0.4.90.ebuild 1383 RMD160 9ef3b5bbc97b1cf0ada016fb45f8ded9d20d005f SHA1 7be9576e7dfb7b40f43e0023a2ac9761ba2e3577 SHA256 62398e6a50ef07ee9fd91ccb7b2c8cad4a6b87e3e168191f75642ecabd2c5b4c
-EBUILD leechcraft-eiskaltdcpp-9999.ebuild 1370 RMD160 79c8066f7beff121ef8df2c44956c56629a81530 SHA1 837c7bdb7b39576fe4bf5458d6aa4691212e8da9 SHA256 b206a42957ff1864361f656a4a54264850fad3c281f9be3f432a089f3b3e2846
-MISC ChangeLog 608 RMD160 ac7319838e95730ea0148122b7aaaf3c8b92443d SHA1 875ccdc2fe679b56753b8a7b417f710488758287 SHA256 316f58b3295b06d9756c26a972948e7cc83b583b46f9689688303adc2968f90b
+EBUILD leechcraft-eiskaltdcpp-0.4.85.ebuild 1407 RMD160 a58fa7d87172290c52cbdd77a8939f6bc3f2a269 SHA1 961b99227bb6fefac8c40c7b0a75d387a0130abd SHA256 503571d3ff9daf5662d41b54d4f9061b4ccead067717304f2425cf406868eed8
+EBUILD leechcraft-eiskaltdcpp-0.4.90.ebuild 1407 RMD160 48cc8eb0330b19d370db8a73172930c331590925 SHA1 3ed40f36525a3b39484d0762687065a4d511f97c SHA256 74339ebadd9a47e6feebb9737b7bf8561af023c46c885974ffc7873c33ce4ff2
+EBUILD leechcraft-eiskaltdcpp-9999.ebuild 1394 RMD160 f80379f9d58750999fca01deb8d95fe97d95352b SHA1 c49a8d387461fe3d6ffd0c34b40cc266402f9769 SHA256 5cede8d395ac12cf1c1fc699d74540d736be233c019e7eab86900b1f5fe409ac
+MISC ChangeLog 828 RMD160 6c8f8e05cca1b7c372697235a576e0c2159d6970 SHA1 7c885fcff2e0226e46f9c83ae0cdebc2e18d96e6 SHA256 d8770f2de382b649cc6de1c7cea0439e07939e6df6b69d14f533747add568dc8
 MISC metadata.xml 285 RMD160 a3c979cce566a12349f27101b8e8c604d3a718cb SHA1 17334059df98a89395576233a3c47c8e454388ef SHA256 030ff07fe9ef1ed33a361fb60444e7697703c4a3585ba3705cdbc88106303f01
